--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "http-client-ts",
     "version": "1.0.0",
-    "description": "ts库项目模板",
+    "description": "声明式http客户端",
     "publishConfig": {
         "access": "public"
     },
     "repository": "https://github.com/dongjak-extensions/http-client-ts",
     "scripts": {
-        "build": "rimraf dist && dts-bundle-generator -o dist/http-client-ts.d.ts index.ts  && vite build",
+        "build": "rimraf dist && dts-bundle-generator --no-check    -o dist/http-client-ts.d.ts index.ts  && vite build",
         "semantic-release": "semantic-release"
     },
     "keywords": [],
@@ -28,5 +28,12 @@
         "semantic-release": "^22.0.0",
         "typescript": "^5.2.2",
         "vite": "^4.5.0"
+    },
+    "peerDependencies": {
+        "axios": "^1.5.0",
+        "luch-request": "^3.1.1"
+    },
+    "dependencies": {
+        "reflect-metadata": "^0.1.13"
     }
 }
