--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "repository": "https://github.com/dongjak-extensions/http-client-ts",
   "scripts": {
     "build": "rimraf dist && dts-bundle-generator --no-check    -o dist/http-client-ts.d.ts index.ts  && vite build",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "type": "module",
@@ -16,25 +17,25 @@
   "license": "MIT",
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^10.0.4",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.0.6",
     "@semantic-release/npm": "^11.0.0",
     "@semantic-release/release-notes-generator": "^11.0.7",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.6.2",
     "dts-bundle-generator": "^8.1.2",
     "handlebars": "^4.7.8",
+    "jest": "^29.7.0",
     "rimraf": "^5.0.1",
     "semantic-release": "^22.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "@types/jest": "^29.5.5",
-    "jest": "^29.7.0",
+    "semantic-release-gitmoji": "^1.6.5",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   },
   "peerDependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.6.2",
     "luch-request": "^3.1.1"
   },
   "dependencies": {
